# beziervice

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  LICENSE  Makefile  README.md  cc.yaml  deploy.Dockerfile  docker-compose.yml
.circleci/: config.yml
.github/workflows/: ghcr.yml  main.yml
Beziervice/: .env  Cargo.toml
Beziervice/migrations/2022-09-04-114845_create_curves/: down.sql  up.sql
Beziervice/src/: bezier_curves.rs  lib.rs  main.rs  models.rs  schema.rs
Beziervice/src/BezierCurves/: Curves.rs  Point.rs  Surface.rs
Beziervice/src/api/: handlers.rs  mod.rs  tests.rs
Beziervice/src/bezier_curves/: curves.rs  point.rs  surface.rs
docs/hito0/: objetivo-logica-negocio.md
docs/hito1/: planificacion-us-entidades.md
docs/hito2/: justificacion-herramientas.md
docs/hito3/: documentacion-dockerfile.md  documentacion-dockerhub.md  documentacion-ghcr.md
docs/hito4/: documentacion-ci.md
docs/hito5/: documentacion-servicioweb.md
postgres/: postgres.conf
