[package]
name = "beziervice"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mathru = "0.13"
pretty_assertions = "1.2.1"
actix-web = "^4"
serde= {version="^1", features=["derive"]}
env_logger="0.8"
log="^0.4"
strum_macros="^0.24"
strum = { version = "^0.24", features = ["derive"]}