[package]
name = "beziervice"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mathru = "0.13"
pretty_assertions = "1.2.1"
actix-web = "^4"
serde= {version="^1", features=["derive"]}
serde_json = "1.0"
strum_macros="^0.24"
strum = { version = "^0.24", features = ["derive"]}
simple_logger = "2.3.0"
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
diesel_migrations = "1.4.0"